--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>源码集合简历</title>
+<title>邵尤超简历</title>
 <meta name="description" content="个人简历描述">
 <meta name="keywords" content="关键词" />
 
@@ -45,7 +45,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-terminal"></i>源码集合</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><i class="fa fa-terminal"></i>邵尤超</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1>简历<span class="brand-heading">-源码集合</span></h1>
+                        <h1>邵尤超<span class="brand-heading">15068146432</span></h1>
                         <p class="intro-text">喜欢技术，热爱挑战</p>
                         <a href="#services" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -96,7 +96,7 @@
             </div>
         </div>
     </header>
-<div class="copyrights">Baron简历 <a href="http://blog.youzewang.com/jianli" >前端工程师</a></div>
+<div class="copyrights">邵尤超简历 <a href="http://blog.youzewang.com/jianli" >安卓开发工程师</a></div>
 <!-- Services Section -->
 <div id="services" class="text-center">
   <div class="container">
@@ -109,14 +109,14 @@
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-laptop"></i>
         <h4><strong>个人信息</strong></h4>
         <p>
-		英文名: Baron &nbsp;性别：男</br>
-		年龄: 25岁 籍贯：湖南
+		英文名: Leo &nbsp;性别：男</br>
+		年龄: 23岁 籍贯：江西
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-code"></i>
         <h4><strong>专业学历</strong></h4>
         <p>
-		专业：电子信息工程</br>
+		专业：软件工程</br>
 		学历：大学本科</br>
 		
 		</p>
@@ -124,14 +124,14 @@
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-rocket"></i>
         <h4><strong>毕业学校</strong></h4>
         <p>
-		  毕业学校：浙江理工大学</br>
+		  毕业学校：华中科技大学武昌分校</br>
 		  学习技能：编程
 		</p>
       </div>
       <div class="col-md-3 col-sm-6 service"> <i class="fa fa-bullseye"></i>
         <h4><strong>联系方式</strong></h4>
-        <p>QQ：406641830</br>
-		  邮箱：admin@ymjihe.com</p>
+        <p>QQ：973555610</br>
+		  邮箱：973555610@qq.com</p>
       </div>
     </div>
   </div>
@@ -143,16 +143,16 @@
       <h2>项目 <strong>经验</strong></h2>
       <hr>
       <div class="clearfix"></div>
-      <p>主要涉及电商，金融，家装领域，包括PC端，手机端，微信端，移动APP端等等，主要技术是HTML+CSS+JS</p>
+      <p>主要涉及电商，金融，直播，社交，主要技术是Retrofit2 + Rxjava2 + Glide + MVP</p>
     </div>
     <div class="categories">
       <ul class="cat">
         <li>
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">所有</a></li>
-            <li><a href="#" data-filter=".web">PC端</a></li>
-            <li><a href="#" data-filter=".app">移动端</a></li>
-            <li><a href="#" data-filter=".branding">响应式</a></li>
+            <li><a href="#" data-filter=".web">直播</a></li>
+            <li><a href="#" data-filter=".app">社交</a></li>
+            <li><a href="#" data-filter=".branding">商城</a></li>
           </ol>
         </li>
       </ul>
